[project]
name = "pricinglibrary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.8.0",
    "polars>=1.42.1",
    "pytest>=9.1.1",
    "scipy>=1.15.3",
    "streamlit>=1.58.0",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pricing_library"]